--- a/Exercice 2/exo2.css
+++ b/Exercice 2/exo2.css
@@ -1107,5 +1107,10 @@ footer div:nth-child(1) div:nth-child(2) ul li a{
         font-weight: 400;
         line-height: 15px;
     }
+    #footerdiv2 p:nth-child(2) span{
+        font-size: 8px;
+        font-weight: 400;
+        line-height: 15px;
+    }
 
 }
